# chouxiang

./: .dockerignore  .gitignore  README.md  architecture-remediation.md  compose.yaml  nailong-desktop-agent-design.md  phase4-reliability-benchmark-dashboard-design.md  plan.md  pyproject.toml  repository-allowlist-dashboard-design.md  security-architecture-remediation.md  security-remediation.md
.github/workflows/: ci.yml
benchmarks/: manifest.toml
docker/: Dockerfile.benchmark  README.md  app.Dockerfile  sandbox.Dockerfile
docs/designs/: 2026-07-15-dashboard-url-submission.md  (+17 more)
scripts/: start.ps1  trigger_notification_demo.py
tests/: streamlit_dashboard_app.py  test_activity_aggregator.py  test_activity_collector.py  test_activity_personality_orchestrator.py  test_activity_recognizer.py  test_adversary.py  test_analysis_events.py  test_arena_export.py  test_artifacts.py  test_ast_analyzer.py  test_ast_rewrite.py  test_benchmark.py  test_benchmark_manifest.py  test_benchmark_repository.py  test_benchmark_runner.py  test_ci_contract.py  test_cli_config.py  test_control_api.py  test_dashboard.py  test_debate_graph.py  test_debate_state.py  test_demo_cases.py  test_execution_control.py  test_execution_graph.py  test_github.py  test_github_url.py  test_llm.py  test_local_repository.py  test_locator.py  test_memory.py  test_metrics.py  test_mutation.py  test_nailong_config.py  test_nailong_contracts.py  test_nailong_personality_agent.py  test_nailong_privacy.py  test_nailong_scaffold.py  test_notification_pipeline.py  test_orchestrator.py  test_persona.py  (+8 more)
(+93 files in other folders)
