[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refactor-agent"
version = "0.1.0"
description = "Local closed-loop code refactoring agent with metrics, pytest verification, and self-healing retries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "GitPython>=3.1",
    "SQLAlchemy>=2.0",
    "docker>=7.0",
    "fastapi>=0.115",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "langgraph>=0.2",
    "litellm>=1.45",
    "pydantic>=2.7",
    "radon>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.36",
]
desktop = [
    "PySide6>=6.7",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
refactor-agent = "refactor_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
refactor_agent = ["demo_project/**/*.py", "demo_project/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
